<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/descrp_textVienw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/esc_EditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:hint="@string/edit_1"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrp_textVienw" />

    <Button
        android:background="@drawable/botton_background"
        android:id="@+id/Botton_verde"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:text="@string/Color_Verde"
        app:layout_constraintEnd_toEndOf="@+id/esc_EditText"
        app:layout_constraintTop_toBottomOf="@+id/esc_EditText" />

    <Button
        android:background="@drawable/botton_background_azul"
        android:id="@+id/Botton_azul"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Color_Azul"
        app:layout_constraintEnd_toEndOf="@+id/Botton_verde"
        app:layout_constraintTop_toBottomOf="@+id/Botton_verde"/>

    <Button
        android:background="@drawable/botton_background_rosado"
        android:id="@+id/Botton_rosado"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Color_Rosado"
        app:layout_constraintEnd_toEndOf="@+id/Botton_azul"
        app:layout_constraintTop_toBottomOf="@+id/Botton_azul"/>

    <Button
        android:background="@drawable/botton_background_amarillo"
        android:id="@+id/Botton_Amarillo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Color_Amarillo"
        app:layout_constraintEnd_toEndOf="@+id/Botton_rosado"
        app:layout_constraintTop_toBottomOf="@+id/Botton_rosado"/>

    <Button
        android:background="@drawable/botton_background_rojo"
        android:id="@+id/Botton_Rojo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Color_Rojo"
        app:layout_constraintEnd_toEndOf="@+id/Botton_Amarillo"
        app:layout_constraintTop_toBottomOf="@+id/Botton_Amarillo"/>

</android.support.constraint.ConstraintLayout>